--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>org.inferred</groupId>
+      <artifactId>source</artifactId>
+      <version>1.0-rc2</version>
+    </dependency>
+    <dependency>
       <groupId>org.jvnet.sorcerer</groupId>
       <artifactId>sorcerer-javac</artifactId>
       <version>0.8</version>
@@ -119,6 +124,12 @@
       <groupId>com.google.truth</groupId>
       <artifactId>truth</artifactId>
       <version>0.24</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.inferred</groupId>
+      <artifactId>testing</artifactId>
+      <version>1.0-rc3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -228,6 +239,7 @@
                 <includes>
                   <include>com.google.guava:guava</include>
                   <include>com.google.code.findbugs:jsr305</include>
+                  <include>org.inferred:source</include>
                 </includes>
               </artifactSet>
               <filters>
@@ -248,6 +260,10 @@
                 <relocation>
                   <pattern>com.google</pattern>
                   <shadedPattern>org.inferred.freebuilder.shaded.com.google</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.inferred.source</pattern>
+                  <shadedPattern>org.inferred.freebuilder.shaded.source</shadedPattern>
                 </relocation>
               </relocations>
             </configuration>
